--- a/chapter2.tex
+++ b/chapter2.tex
@@ -73,6 +73,6 @@ Ericдщ\cite{taskdriven}д╧бде╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛
 
 ░ь╩¤╦▄╕ж╡цд╟д╧бдележеєе╗ещб╝д╚епещедеиеєе╚д╬▓ё╧├д╦дкддд╞бд╞├д╦ележеєе╗ещб╝д╬╝┴╠фд╬╝я╬р╩мд▒дЄдддлд╦╔┴▓шд╣дыдлдм╜┼═╫д╚д╩дыбеележеєе╗ещб╝д╬╝┴╠фд╬╝я╬рд╦▒■д╕д╞дддлд╦епещедеиеєе╚д╬▓є┼·дЄ░·дн╜╨д╗дыдлдЄ▓─╗ы▓╜д╣дыд│д╚дм╜┼═╫д╟двдыдмбдележеєе╗ещб╝д╬╝┴╠фд╚д╜дьд╦┬╨д╣дыепещедеиеєе╚д╬▓є┼·д╧╕Є╕▀д╦╜╨╕╜д╣дыд╬д╟бдд╜д╬╛Ё╩єдЄ┤▐дсд╞дддлд╦╔┴▓шд╣дыдлдм╜┼═╫д╟двдыбе
 
-д╜д│д╟─є░╞е╖е╣е╞ерд╚д╖д╞бдележеєе╗ещб╝длдщд╬╝┴╠ф╖┴┬╓д╚бд б╓▓╚┬▓б╫б╓╗┼╗Ўб╫б╓═з┐═б╫д╬├▒╕ье░еыб╝е╫д╬╗■┤╓╖╨▓сд╦▒шд├д┐╩м╔█╩╤▓╜дЄ▓─╗ы▓╜д╖д┐бе▓─╗ы▓╜д╦двд┐д├д╞д╧бдележеєе╗еъеєе░╩╕╗·╡пд│д╖е╞ене╣е╚е╟б╝е┐дЄ╖┴┬╓┴╟▓Є└╧д╖бдб╓▓╚┬▓б╫б╓╗┼╗Ўб╫б╓═з┐═б╫д╦┤╪╧вд╣ды├▒╕ьдЄ├╡д╖д╞▓╛д╬╩м╬р╖ы▓╠д╚д╖д╞е░еще╒дЄ─є╝ид╣дыбед╜д╬╛хд╟бдеще╕еке▄е┐еєд╦дшд├д╞б╓▓╚┬▓б╫б╓╗┼╗Ўб╫б╓═з┐═б╫д╬╩м╬рдЄ╩╤╣╣д╣дыд│д╚дм╜╨═шдыдшджд╦д╖д┐бе
+д╜д│д╟─є░╞е╖е╣е╞ерд╚д╖д╞бдележеєе╗ещб╝длдщд╬╝┴╠ф╖┴┬╓д╚бд б╓░жб╫б╓╗┼╗Ўб╫б╓═з┐═б╫д╬├▒╕ье░еыб╝е╫д╬╗■┤╓╖╨▓сд╦▒шд├д┐╩м╔█╩╤▓╜дЄ▓─╗ы▓╜д╖д┐бе▓─╗ы▓╜д╦двд┐д├д╞д╧бдележеєе╗еъеєе░╩╕╗·╡пд│д╖е╞ене╣е╚е╟б╝е┐дЄ╖┴┬╓┴╟▓Є└╧д╖бдб╓░жб╫б╓╗┼╗Ўб╫б╓═з┐═б╫д╦┤╪╧вд╣ды├▒╕ьдЄ├╡д╖д╞▓╛д╬╩м╬р╖ы▓╠д╚д╖д╞е░еще╒дЄ─є╝ид╣дыбед╜д╬╛хд╟бдеще╕еке▄е┐еєд╦дшд├д╞б╓░жб╫б╓╗┼╗Ўб╫б╓═з┐═б╫д╬╩м╬рдЄ╩╤╣╣д╣дыд│д╚дм╜╨═шдыдшджд╦д╖д┐бе
 
 ╝б╛╧д╟д╧д╔д╬дшджд╦е╖е╣е╞ердЄ╣╜└од╖д┐длд╦д─ддд╞╜╥д┘дыбе
