--- a/chapter3.tex
+++ b/chapter3.tex
@@ -31,7 +31,7 @@
 
 
 現在，世界保健機関（WHO）憲章前文において「健康とは，病気でないとか，弱っていないということではなく，肉体的にも，精神的にも，そして社会的にも，すべてが
-満たされた状態にあることをいいます．（日本WHO協会訳）」と書いてある通り，WHOは健康を肉体的・精神的・社会的という3つの側面からとらえている．一方，アドラーは「人生のすべての問題は，3つの主要な課題に分類することが出来る．すなわち，交友の課題，仕事の課題，愛の課題であると唱えた．\cite{ad2}以上からアドラー心理学では，ライフタスクについて，来談者にとっての親疎の関係から，仕事のタスク（Work Task）：永続しない人間関係，交友のタスク（Friendship Task）：永続するが，運命をともにしない人間関係，愛のタスク（Love or Family Task）：永続し，運命をともにする人間関係の3つに区別している．臨床上，人間の問題についてこのように恣意的に3つに分類することは，極めて有効であるとされている．
+満たされた状態にあることをいいます．（日本WHO協会訳）」と書いてある通り，WHOは健康を肉体的・精神的・社会的という3つの側面からとらえている．一方，アドラーは「人生のすべての問題は，3つの主要なタスクに分類することが出来る．すなわち，交友のタスク，仕事のタスク，愛のタスクであると唱えた．\cite{ad2}以上からアドラー心理学では，ライフタスクについて，来談者にとっての親疎の関係から，仕事のタスク（Work Task）：永続しない人間関係，交友のタスク（Friendship Task）：永続するが，運命をともにしない人間関係，愛のタスク（Love or Family Task）：永続し，運命をともにする人間関係の3つに区別している．臨床上，人間の問題についてこのように恣意的に3つに分類することは，極めて有効であるとされている．
 
 %
 
@@ -65,8 +65,8 @@
 %治療技法としては，
 %\begin{itemize}
 % \item 現実的に達成可能な治療目標の一致をとること
-% \item クライエント，すなわりクライエントの言うことの主として目的について推量をして，それをクライエントに確認をとること
-% \item クライエント自身が自分の責任で解決しなければならない課題と，クライエントには責任がなく介入する権利がない課題とを区別すること
+% \item クライエント，すなわちクライエントの言うことの主として目的について推量をして，それをクライエントに確認をとること
+% \item クライエント自身が自分の責任で解決しなければならないタスクと，クライエントには責任がなく介入する権利がないタスクとを区別すること
 % \item 目標達成のためのさまざまなアイディアを提供すること
 %\end{itemize}
 %などがあげられる．
@@ -88,11 +88,11 @@
 
 %%カウンセラーの質問内容については，大きく2種類に分けられている．YesまたはNoで答える質問，ないし短い言葉だけで答えられるような質問は「閉じられた質問」ないし「閉ざされた質問」と呼ばれている．これに対し，クライエントが5W1H「いつ」「どこで」「誰が」「何を」「どのように」「どうした」で答えるような質問は「開かれた質問」と呼ばれている．クライエントが何に問題意識を感じているかをカウンセリングで引き出すには，カウンセラーは「閉じられた質問」よりも「開かれた質問」をしたほうがよいとされている．しかしビギナーのカウンセラーは「閉じられた質問」の割合が多く，クライエントが何に問題意識を感じているかをカウンセリングでうまく引き出せないケースが比較的多いとされている．
 
-%クライエントの会話としては，内容がどの課題領域（仕事，交友，愛，セルフタスク，スピリチュアル）に属するのか，カウンセラーの質問としては，内容がオープン（5W1Hを問うもの）またはクローズ（Yes/Noを問うもの）なのかを分類表示できることが必要である．
+%クライエントの会話としては，内容がどのタスク領域（仕事，交友，愛，セルフタスク，スピリチュアル）に属するのか，カウンセラーの質問としては，内容がオープン（5W1Hを問うもの）またはクローズ（Yes/Noを問うもの）なのかを分類表示できることが必要である．
 
 %クライエントからの提出した話題が，どの領域に関するものか，カウンセリングの中でその領域がどのように変わっていくかを分析していくと，そのカウンセリングプロセスがより明確になると考えられる．タイムラインで見ると，最初にクライエントの関心がどこにあったのか，それに対してカウンセラーからの発話で異なった領域に話題が展開した，というような分析も可能になると考えられる．
 %クライエントの関心に関心を向けるというのがカウンセリングの基本ですので，このようにカウンセラーの関心でクライエントを誘導してしまうことはよろしくありませんので，そのためのチェックが可能になるものと考える．
 
-%もうひとつの課題として，ビギナーのカウンセラーは閉じられた質問を多く用いる傾向にあるので，ビギナーのカウンセラーを開かれた質問が自由に使えるようになる必要がある．これをチェックできることが求められる．
+%もうひとつのタスクとして，ビギナーのカウンセラーは閉じられた質問を多く用いる傾向にあるので，ビギナーのカウンセラーを開かれた質問が自由に使えるようになる必要がある．これをチェックできることが求められる．
 
-以上のことをもとに，本研究では，タイムライン形式の時間軸に沿った可視化によって，クライエントとカウンセラーの会話を可視化し，カウンセラーの発した質問によって会話の流れがどのように変化するのかを明らかにするWebシステムを開発した．次章では本論文の提案システムのプロトタイプの開発，およびそのプロトタイプに対して専門家すなわちカウンセラーからいただいたレビューをもとにした，提案システムに対する要件の抽出のについて説明する．
+以上のことをもとに，本研究では，タイムライン形式の時間軸に沿った可視化によって，クライエントとカウンセラーの会話を可視化し，カウンセラーの発した質問によって会話の流れがどのように変化するのかを明らかにするWebシステムを開発した．次章では本論文の提案システムのプロトタイプの開発，およびそのプロトタイプに対して専門家すなわちカウンセラーからいただいたレビューをもとにした，提案システムに対する要件の抽出について説明する．
