--- a/chapter4.tex
+++ b/chapter4.tex
@@ -63,14 +63,14 @@
 
 д▐д║бде╓ещеже╢╛хд╟│╞е╞ене╣е╚д╬jsonе╒ебедеыдЄ╞╔д▀╣■дєд╟╖┴┬╓┴╟▓Є└╧д╣дыбе
 ╖┴┬╓┴╟▓Є└╧д╦д╧бдJavaScript╕└╕ьд╬╖┴┬╓┴╟▓Є└╧ещеде╓ещеъд╟двдыkuromoji.js\cite{kuromojijs}дЄ╗╚═╤д╖д┐бе
-ележеєе╗еъеєе░╩╕╗·╡пд│д╖е╞ене╣е╚е╟б╝е┐дЄ╖┴┬╓┴╟▓Є└╧д╖бд╢ж╡пе▐е├е╫д╩д╔дЄ╔┴▓шд╖д╞б╓▓╚┬▓б╫б╓╗┼╗Ўб╫б╓═з┐═б╫д╦┤╪╧вд╣ды├▒╕ьдЄ├╡д╣бед╜д│длдщбдележеєе╗ещб╝длдщд╬╝┴╠ф╖┴┬╓д╚бд б╓▓╚┬▓б╫б╓╗┼╗Ўб╫б╓═з┐═б╫д╬├▒╕ье░еыб╝е╫д╬╗■┤╓╖╨▓сд╦▒шд├д┐╩м╔█╩╤▓╜дЄ▓─╗ы▓╜д╖д┐бе
+ележеєе╗еъеєе░╩╕╗·╡пд│д╖е╞ене╣е╚е╟б╝е┐дЄ╖┴┬╓┴╟▓Є└╧д╖бд╢ж╡пе▐е├е╫д╩д╔дЄ╔┴▓шд╖д╞б╓░жб╫б╓╗┼╗Ўб╫б╓═з┐═б╫д╦┤╪╧вд╣ды├▒╕ьдЄ├╡д╣бед╜д│длдщбдележеєе╗ещб╝длдщд╬╝┴╠ф╖┴┬╓д╚бд б╓░жб╫б╓╗┼╗Ўб╫б╓═з┐═б╫д╬├▒╕ье░еыб╝е╫д╬╗■┤╓╖╨▓сд╦▒шд├д┐╩м╔█╩╤▓╜дЄ▓─╗ы▓╜д╖д┐бе
 
 ╦▄е╖е╣е╞ерд╟д╧бдепещедеиеєе╚д╩ддд╖ележеєе╗ещб╝д╬░ь╚п╕└дЄбд╧├╝╘д╬╕Є┬хд╦дшд├д╞╚╜├╟д╣дыдтд╬д╚д╣дыбед─д▐дъбдепещедеиеєе╚д╬░ь╚п╕└д╧бдележеєе╗ещб╝дм├¤дъ╜кдяд├д╞епещедеиеєе╚дм├¤дъ╗╧дсд╞длдщбдепещедеиеєе╚дм├¤дъ╜кдяд├д╞ележеєе╗ещб╝дм├¤дъ╗╧дсдыд▐д╟д╟двдыбед▐д┐бдележеєе╗ещб╝д╬░ь╚п╕└д╧бдепещедеиеєе╚дм├¤дъ╜кдяд├д╞длдщбддвдыддд╧ележеєе╗ещб╝дм╧├дЄ└┌дъ╜╨д╖╗╧дсд╞длдщбдележеєе╗ещб╝дм├¤дъ╜кдяд├д╞епещедеиеєе╚дм├¤дъ╗╧дсдыд▐д╟д╟двдыбе
 
 jsonе╒ебедеы╞тд╬╦▄╩╕д╬╖┴╝░д╦д─ддд╞└т╠└д╣дыбе┴┤│╤╔╜╝ид╬е│еэеєб╩бзб╦д╟╧├╝╘д╬╕Є┬хдЄ╟з╝▒бд┴┤│╤╔╜╝ид╬е│еэеєб╩бзб╦бд┴┤│╤╔╜╝ид╬╢ч┼└б╩беб╦д╩ддд╖епеие╣е┴ечеєе▐б╝епб╩бй,?б╦д╟╩╕д╬╜кдядъдЄ╟з╝▒д╣дыдшдж└▀─ъд╡дьд╞дддыбед╜д╬д┐дсбд╧├╝╘дм╕Є┬хд╣дыд┐д╙д╦┴┤│╤╔╜╝ид╬е│еэеєб╩бзб╦д╟╢ш└┌дь╠▄дЄ╝ид╡д╩ддд╚ддд▒д╩ддбе
 
 \subsubsection{└╤д▀╜┼д═└▐дь└■е░еще╒}
-Fig.2д╦дкддд╞бдд▐д║└╤д▀╜┼д═└▐дь└■е░еще╒д╧епещедеиеєе╚д╬1▓є1▓єд╬╚п╕└д╬├цд╟д╬бдеве╔ещб╝┐┤═¤│╪д╬│╞еле╞е┤еъд╬╩м╔█дЄ▓─╗ы▓╜д╖д╞дддыбед┐д└д╖1▓є1▓єд╬╚п╕└д╧бд╧├╝╘д╬╕Є┬хдЄ╚п╕└д╬╢ш└┌дь╠▄д╚д╣дыбед│д╬└╤д▀╜┼д═└▐дь└■е░еще╒д╦дкддд╞└─┐зд╧б╓╗┼╗Ў┤╪╖╕б╫бде╘еєеп┐зд╧б╓░жб╩╬°░жбж▓╚┬▓┤╪╖╕б╦б╫бд╬╨┐зд╧б╓╕Є═зб╩═з┐═┤╪╖╕б╦б╫д╦╠й└▄д╦┤╪╖╕д╣ды├▒╕ьдЄ┤▐др╩╕д╬╩м╔█дЄ╔╜д╖д╞дддыбе
+Fig.2д╦дкддд╞бдд▐д║└╤д▀╜┼д═└▐дь└■е░еще╒д╧епещедеиеєе╚д╬1▓є1▓єд╬╚п╕└д╬├цд╟д╬бдеве╔ещб╝┐┤═¤│╪д╬│╞еле╞е┤еъд╬╩м╔█дЄ▓─╗ы▓╜д╖д╞дддыбед┐д└д╖1▓є1▓єд╬╚п╕└д╧бд╧├╝╘д╬╕Є┬хдЄ╚п╕└д╬╢ш└┌дь╠▄д╚д╣дыбед│д╬└╤д▀╜┼д═└▐дь└■е░еще╒д╦дкддд╞└─┐зд╧б╓╗┼╗Ў┤╪╖╕б╫бде╘еєеп┐зд╧б╓░жб╩╬°░жбж░ж┤╪╖╕б╦б╫бд╬╨┐зд╧б╓╕Є═зб╩═з┐═┤╪╖╕б╦б╫д╦╠й└▄д╦┤╪╖╕д╣ды├▒╕ьдЄ┤▐др╩╕д╬╩м╔█дЄ╔╜д╖д╞дддыбе
 ▓г╝┤д╧╗■┤╓╝┤дЄ╔╜╕╜д╖д╞дддыбед┐д└д╖┬╨╛▌е╟б╝е┐д╟двды╜ёдн╡пд│д╖е╞ене╣е╚е╟б╝е┐длдщд╧╝┬║▌д╬╖╨▓с╔├┐Їд╧╞╔д▀╝шдьд╩ддд╬д╟бд╞╔д▀╣■д▐д╗д┐е╟б╝е┐╞тд╦дкд▒дыепещедеиеєе╚д╬╚п╕└╬╠д╬╣ч╖╫д╦┬╨д╖д╞
 
 \subsubsection{ележеєе╗ещб╝д╬╝┴╠фдЄ╔╜╕╜д╣ды╜─╦└}
@@ -132,7 +132,7 @@ Ericдщ\cite{taskdriven}д╧бде╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛
 %╔┴▓ш╕хд╦еще╕еке▄е┐еєдЄ╩╤дид╞дт╚┐▒■дмд╩ддбе╕╜╛їд╟д╧д╜д╬╛ьд╟е┴езе├епе▄е├епе╣д╬┴к┬ЄдЄ╩╤дид┐д└д▒д╟д╧е░еще╒д╦д╜д╬┴к┬Єд╬╩╤╣╣дм╚┐▒╟д╡дьд║бд1▓є1▓єе╓ещеже╢╛хд╟е┌б╝е╕дЄеъеэб╝е╔д╖д╞бдележеєе╗еъеєе░д╬╩╕╗·╡пд│д╖е╞ене╣е╚е╟б╝е┐д╬jsonе╒ебедеыдт╞╔д▀╣■д▀─╛д╣╔м═╫дм└╕д╕д╞дддыбее╓ещеже╢╛хд╟е┌б╝е╕дЄеъеэб╝е╔д╖д╩дпдтбде┴езе├епе▄е├епе╣д╬┴к┬ЄдЄ╩╤дидыд│д╚д╟е╖б╝ереье╣д╦е░еще╒дм╩╤▓╜д╣дыд│д╚дм╡сдсдщдьд┐бе
 
 %\subsubsection{б╓д╜д╬┬╛б╫}
-%б╓│лдлдьд┐╝┴╠фб╫б╓╩─д╕дщдьд┐╝┴╠фб╫д└д▒д╟д╩дпбд┴ъд┼д┴дф└д┤╓╧├дЄб╓д╜д╬┬╛б╫дЄ└▀д▒дыд┘днд╚╣═дидщдьдыбе─є░╞е╖е╣е╞ер1д╦дкддд╞д╧бдб╓д╩д╝б╫б╓▓┐б╫д╩д╔д╬5W1HдЄ┐╓дпдшджд╩╡┐╠ф╗ыдЄ┤▐др╚п╕└дЄб╓│лдлдьд┐╝┴╠фб╫д╚д╖д╞─ъ╡┴д╖бдд╜дь░╩│░дЄб╓╩─д╕дщдьд┐╝┴╠фб╫д╚─ъ╡┴д╖д╞ддд┐д╬д╟бд─є░╞е╖е╣е╞ер1д╦дкд▒дыб╓╩─д╕дщдьд┐╝┴╠фб╫дЄд╡дщд╦бд░╩╣▀д╬е╖е╣е╞ерд╦дкддд╞б╓╩─д╕дщдьд┐╝┴╠фб╫д╚б╓д╜д╬┬╛б╫д╦дяд▒ды╔м═╫дмдвдыд╚╣═дидщдьдыбе
+%б╓│лдлдьд┐╝┴╠фб╫б╓╩─д╕дщдьд┐╝┴╠фб╫д└д▒д╟д╩дпбд┴ъ─╚дф└д┤╓╧├дЄб╓д╜д╬┬╛б╫дЄ└▀д▒дыд┘днд╚╣═дидщдьдыбе─є░╞е╖е╣е╞ер1д╦дкддд╞д╧бдб╓д╩д╝б╫б╓▓┐б╫д╩д╔д╬5W1HдЄ┐╓дпдшджд╩╡┐╠ф╗ыдЄ┤▐др╚п╕└дЄб╓│лдлдьд┐╝┴╠фб╫д╚д╖д╞─ъ╡┴д╖бдд╜дь░╩│░дЄб╓╩─д╕дщдьд┐╝┴╠фб╫д╚─ъ╡┴д╖д╞ддд┐д╬д╟бд─є░╞е╖е╣е╞ер1д╦дкд▒дыб╓╩─д╕дщдьд┐╝┴╠фб╫дЄд╡дщд╦бд░╩╣▀д╬е╖е╣е╞ерд╦дкддд╞б╓╩─д╕дщдьд┐╝┴╠фб╫д╚б╓д╜д╬┬╛б╫д╦дяд▒ды╔м═╫дмдвдыд╚╣═дидщдьдыбе
 
 
 %\subsubsection{еще╕еке▄е┐еє╔╜╝и╗■┤╓}
@@ -163,13 +163,13 @@ Ericдщ\cite{taskdriven}д╧бде╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛
 
 
 %\subsubsection{б╓│лдлдьд┐╝┴╠фб╫бжб╓╩─д╕дщдьд┐╝┴╠фб╫бжб╓д╜д╬┬╛б╫}
-%д╡дщд╦─є░╞е╖е╣е╞ерд╟д╧бдележеєе╗ещб╝длдщд╬│╞╝┴╠фд╦дкддд╞дтбд5W1Hб╓ддд─б╫б╓д╔д│д╟б╫б╓├пдмб╫б╓▓┐дЄб╫б╓д╔д╬дшджд╦б╫б╓д╔джд╖д┐б╫д╩д╔д╟╠фдядьдыдшджд╩б╓│лдлдьд┐╝┴╠фб╫д╩д╬длбдYes/Noд╟┼·дидщдьдыбддвдыддд╧░ь╕└д└д▒д╟┤╩├▒┼·дидщдьдыдшджд╩б╓╩─д╕дщдьд┐╝┴╠фб╫д╩д╬длбддвдыддд╧╠╡┬╠╧├бж┴ъд┼д┴д╩д╔бдд╔д┴дщд╦дт╩м╬рд╡дьд╩дддшджд╩б╓д╜д╬┬╛б╫д╩д╬длдЄбдецб╝е╢б╝дм╝ъ╞░д╟╜д└╡д╟дндыдшджд╦д╖д┐бе
+%д╡дщд╦─є░╞е╖е╣е╞ерд╟д╧бдележеєе╗ещб╝длдщд╬│╞╝┴╠фд╦дкддд╞дтбд5W1Hб╓ддд─б╫б╓д╔д│д╟б╫б╓├пдмб╫б╓▓┐дЄб╫б╓д╔д╬дшджд╦б╫б╓д╔джд╖д┐б╫д╩д╔д╟╠фдядьдыдшджд╩б╓│лдлдьд┐╝┴╠фб╫д╩д╬длбдYes/Noд╟┼·дидщдьдыбддвдыддд╧░ь╕└д└д▒д╟┤╩├▒┼·дидщдьдыдшджд╩б╓╩─д╕дщдьд┐╝┴╠фб╫д╩д╬длбддвдыддд╧╠╡┬╠╧├бж┴ъ─╚д╩д╔бдд╔д┴дщд╦дт╩м╬рд╡дьд╩дддшджд╩б╓д╜д╬┬╛б╫д╩д╬длдЄбдецб╝е╢б╝дм╝ъ╞░д╟╜д└╡д╟дндыдшджд╦д╖д┐бе
 
 %ележеєе╗ещб╝длдщд╬│╞╝┴╠фд╦дкддд╞бдд╜дьд╛дьб╓│лдлдьд┐╝┴╠фб╫бжб╓╩─д╕дщдьд┐╝┴╠фб╫бжб╓д╜д╬┬╛б╫д╬┴к┬Є╗шдм╔╜╝ид╡дьбд─є░╞е╖е╣е╞ер1д╟═╜┬мд╡дьд┐┴к┬Є╗шд╦двдщдлд╕дсе┴езе├епдм╞■д├д╞дддыдшдже╫еэе░ещерд╖д┐бед╜д╖д╞бд│╞├▒╕ьдЄепещедеиеєе╚д╬╧├┬ъд╬╩м╠юд┤д╚д╦дяд▒дые┴езе├епе▄е├епе╣д╚╞▒══д╦бде╓ещеже╢╛хд╟е┌б╝е╕дЄеъеэб╝е╔д╖д╩дпдтбде┴езе├епе▄е├епе╣д╬┴к┬ЄдЄ╩╤дидыд│д╚д╟е╖б╝ереье╣д╦е░еще╒дм╩╤▓╜д╣дыдшджд╦д╖д┐бе
 
 
 %\subsubsection{б╓д╜д╬┬╛б╫}
-%б╓│лдлдьд┐╝┴╠фб╫б╓╩─д╕дщдьд┐╝┴╠фб╫д└д▒д╟д╩дпбд┴ъд┼д┴дф└д┤╓╧├д╩д╔дЄ┤▐дрб╓д╜д╬┬╛б╫дЄ└▀д▒дыд┘днд╚╗╪┼жд╡дьд┐д╬д╟бд─є░╞е╖е╣е╞ерг▒д╬╗┼┴╚д▀д╦дкддд╞б╓│лдлдьд┐╝┴╠фб╫д╚╚╜─ъд╡дьд╩длд├д┐ележеєе╗ещб╝д╬╚п╕└д╬джд┴бд╜к╜ї╗ьб╓длб╫дЄ┤▐дрдтд╬дЄб╓╩─д╕дщдьд┐╝┴╠фб╫д╚д╖бдд╜дь░╩│░дЄб╓д╜д╬┬╛б╫д╚д╖д┐бе
+%б╓│лдлдьд┐╝┴╠фб╫б╓╩─д╕дщдьд┐╝┴╠фб╫д└д▒д╟д╩дпбд┴ъ─╚дф└д┤╓╧├д╩д╔дЄ┤▐дрб╓д╜д╬┬╛б╫дЄ└▀д▒дыд┘днд╚╗╪┼жд╡дьд┐д╬д╟бд─є░╞е╖е╣е╞ерг▒д╬╗┼┴╚д▀д╦дкддд╞б╓│лдлдьд┐╝┴╠фб╫д╚╚╜─ъд╡дьд╩длд├д┐ележеєе╗ещб╝д╬╚п╕└д╬джд┴бд╜к╜ї╗ьб╓длб╫дЄ┤▐дрдтд╬дЄб╓╩─д╕дщдьд┐╝┴╠фб╫д╚д╖бдд╜дь░╩│░дЄб╓д╜д╬┬╛б╫д╚д╖д┐бе
 
 %д▐д┐бд└╤д▀╜┼д═└▐дь└■е░еще╒╛хд╦дкддд╞бдб╓╩─д╕дщдьд┐╝┴╠фб╫дЄ╟╗дде░еьб╝┐зд╬╜─╦└д╟бдб╓д╜д╬┬╛б╫дЄ╟Ўдде░еьб╝┐зд╬╜─╦└д╟╔┴▓шд╖д┐бе
 
@@ -219,7 +219,7 @@ Ericдщ\cite{taskdriven}д╧бде╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛
 %епещедеиеєе╚д╬╚п╕└д╦д─ддд╞
 %├▒╕ь├▒░╠д╟д╧д╩дп╩╕├▒░╠д╟б╓░жб╫б╓╕Є═зб╫б╓╗┼╗Ўб╫дЄ╩м╬рд╣д┘дн
 %ележеєе╗ещб╝д╬╚п╕└д╦д─ддд╞
-%б╓│лдлдьд┐╝┴╠фб╫б╓╩─д╕дщдьд┐╝┴╠фб╫д└д▒д╟д╩дпбдб╓▓Є╝сб╫б╓┴ъд┼д┴б╫б╓╠╡┬╠╧├б╫дт╩м╬рд╣д┘дн
+%б╓│лдлдьд┐╝┴╠фб╫б╓╩─д╕дщдьд┐╝┴╠фб╫д└д▒д╟д╩дпбдб╓▓Є╝сб╫б╓┴ъ─╚б╫б╓╠╡┬╠╧├б╫дт╩м╬рд╣д┘дн
 %┴к┬Є╗шдм┬┐д╣доды
 %╩м╬╠д╦▒■д╕д╞╜─╦└д╬┬└д╡дф┤╓│╓дЄ╩╤дидыд│д╚дЄ─є░╞
 
@@ -245,9 +245,9 @@ Ericдщ\cite{taskdriven}д╧бде╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛
 %д│д│д╟д╧╝чд╦бд─є░╞е╖е╣е╞ер2дм╩·дид╞ддд┐╠ф┬ъд╪д╬┬╨╜шд╦д─ддд╞╜╥д┘дыбе
 
 
-%\subsubsection{б╓▓Є╝сб╫бжб╓┴ъд┼д┴б╫бжб╓╠╡┬╠╧├б╫}
+%\subsubsection{б╓▓Є╝сб╫бжб╓┴ъ─╚б╫бжб╓╠╡┬╠╧├б╫}
 %─є░╞е╖е╣е╞ер2д╦дкддд╞бдепещедеиеєе╚д╬╚п╕└д╦д─ддд╞├▒╕ь├▒░╠д╟д╧д╩дп╩╕├▒░╠д╟б╓░жб╫б╓╕Є═зб╫б╓╗┼╗Ўб╫дЄ╩м╬рд╖д╞ддд┐бе
-%д╜д│длдщд╡дщд╦бд─є░╞е╖е╣е╞ер3д╦дкддд╞д╧бдележеєе╗ещб╝д╬╚п╕└д╦д─ддд╞б╓│лдлдьд┐╝┴╠фб╫б╓╩─д╕дщдьд┐╝┴╠фб╫д└д▒д╟д╩дпбдб╓д╜д╬┬╛б╫дЄ└▀д▒бдд╡дщд╦б╓д╜д╬┬╛б╫дЄб╓▓Є╝сб╫б╓┴ъд┼д┴б╫б╓╠╡┬╠╧├б╫д╬3д─д╦╩м╬рд╖д┐бе
+%д╜д│длдщд╡дщд╦бд─є░╞е╖е╣е╞ер3д╦дкддд╞д╧бдележеєе╗ещб╝д╬╚п╕└д╦д─ддд╞б╓│лдлдьд┐╝┴╠фб╫б╓╩─д╕дщдьд┐╝┴╠фб╫д└д▒д╟д╩дпбдб╓д╜д╬┬╛б╫дЄ└▀д▒бдд╡дщд╦б╓д╜д╬┬╛б╫дЄб╓▓Є╝сб╫б╓┴ъ─╚б╫б╓╠╡┬╠╧├б╫д╬3д─д╦╩м╬рд╖д┐бе
 
 
 
@@ -272,7 +272,7 @@ Ericдщ\cite{taskdriven}д╧бде╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛
 %╩─д╕дщдьд┐╝┴╠фд╧бд╦▄═шележеєе╗ещб╝┬жд╬▓Є╝сдЄ│╬╟зд╣дыд┐дсд╬╝┴╠фд╟д╣бед╖дл
 %д╖бд╝┴╠ф╖┴д╚д╖д╞д╧│лдлдьд┐╝┴╠фд╚┬╨дЄд╩д╖д╞ддд▐д╣д╬д╟бдд│дьд╧д│дьд╟дкддд╞
 %дкднбд╝┴╠ф╖┴╝░д╟д╧д╩дд▓Є╝сдЄб╓▓Є╝сб╫д╦╩м╬рд╣дыд╬дм┬┼┼Ўд╚╣═дид▐д╣бедшд├д╞бд
-%╩м╬рд╧бдб╓│лдлдьд┐╝┴╠фб╫б╓╩─д╕дщдьд┐╝┴╠фб╫б╓▓Є╝сб╫б╓┴ъд┼д┴б╫б╓└д┤╓╧├б╫д╦
+%╩м╬рд╧бдб╓│лдлдьд┐╝┴╠фб╫б╓╩─д╕дщдьд┐╝┴╠фб╫б╓▓Є╝сб╫б╓┴ъ─╚б╫б╓└д┤╓╧├б╫д╦
 %╩мд▒д╞ддд┐д└дпд╚ддддд╟д╣д═беб╫
 %\end{itemize}
 
@@ -306,7 +306,7 @@ Ericдщ\cite{taskdriven}д╧бде╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛
 %╬удид╨б╓д█дєд╚д╦бд─лдт├ыдт╕л─едщдьд╞д╩ддд├д╞ддд├д┐дщ╩╤д╩╕└дд╩¤д╟д╣д▒д╔бд┐йд┘д┐
 %ддд╚днд╦┐йд┘дьды╛ї╢╖д├д╞ддджд╬дмд╣д┤дп╡╫д╖д╓дъд╟бдд╩дєдл╝л╩мд╟дтд╔джд╩дє
 %длд╩д├д╞ддджд╬дмдвд├д┐дєд╟д╣д▒д╔бд░╒│░д╚╔с─╠д╦д╟днд┐д▀д┐ддд╩б╩╛╨б╦д╜дьд╧
-%бддвдъд▐д╣д═бжбжбжд╩дєдл▓╚┬▓дмддд┐дщ┐йд┘д╩дндуддд▒д╩длд├д┐дъд╚длд╣дыд╖б╫д╚дддж╩╕д╦┬╨д╖д╞бдб╓бжбжбжб╫дшдъ┴░д╬╔Ї╩мд╧б╓▓╚┬▓б╫б╓╕Є═зб╫б╓╗┼╗Ўб╫д╬д╔д╬╩м╬рд╦дт┬░д╡д║бдб╓бжбжбжб╫дшдъ╕хд╬╔Ї╩мд╧б╓▓╚┬▓б╫д╦┬░д╣дыдмбде╫еэе╚е┐еде╫е╨б╝е╕ечеєд╦дкддд╞д╧б╓бжбжбжб╫дЄб╓беб╫д╬дшджд╩1╩╕1╩╕д╬╢ш└┌дь╠▄д╦└▀─ъд╖д╞д╩ддд╬д╟бд╢ш╩╠д╖д┐╚╜─ъ╩╤╣╣дм─є░╞е╖е╣е╞ерецб╝е╢б╝┬жд╟д╟днд╩ддбе
+%бддвдъд▐д╣д═бжбжбжд╩дєдл░ждмддд┐дщ┐йд┘д╩дндуддд▒д╩длд├д┐дъд╚длд╣дыд╖б╫д╚дддж╩╕д╦┬╨д╖д╞бдб╓бжбжбжб╫дшдъ┴░д╬╔Ї╩мд╧б╓░жб╫б╓╕Є═зб╫б╓╗┼╗Ўб╫д╬д╔д╬╩м╬рд╦дт┬░д╡д║бдб╓бжбжбжб╫дшдъ╕хд╬╔Ї╩мд╧б╓░жб╫д╦┬░д╣дыдмбде╫еэе╚е┐еде╫е╨б╝е╕ечеєд╦дкддд╞д╧б╓бжбжбжб╫дЄб╓беб╫д╬дшджд╩1╩╕1╩╕д╬╢ш└┌дь╠▄д╦└▀─ъд╖д╞д╩ддд╬д╟бд╢ш╩╠д╖д┐╚╜─ъ╩╤╣╣дм─є░╞е╖е╣е╞ерецб╝е╢б╝┬жд╟д╟днд╩ддбе
 
 %б╓бжбжбжб╫дЄ
 
@@ -371,7 +371,7 @@ Ericдщ\cite{taskdriven}д╧бде╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛
 \subsection{ележеєе╗ещб╝д╬╚п╕└д╬╩м╬р├▒░╠}
 д▐д║бдепещедеиеєе╚длдщд╬╩╓┼·д└д▒д╟д╩дпбдележеєе╗ещб╝д╬╝┴╠ф╢ш╩мд▒дт╝ъ╞░д╟╜д└╡д╖д┐ддд╚ддджеье╙ехб╝дЄддд┐д└ддд┐бе
 
-д▐д┐бдележеєе╗ещб╝д╬╚п╕└д╦д─ддд╞бдб╓│лдлдьд┐╝┴╠фб╫б╓╩─д╕дщдьд┐╝┴╠фб╫д└д▒д╟д╩дпбдб╓▓Є╝сб╫б╓┴ъд┼д┴б╫б╓└д┤╓╧├б╫д╚дддж╩м╬рдЄ─╔▓├д╖д╞д█д╖ддд╚ддджеье╙ехб╝дЄддд┐д└ддд┐бе
+д▐д┐бдележеєе╗ещб╝д╬╚п╕└д╦д─ддд╞бдб╓│лдлдьд┐╝┴╠фб╫б╓╩─д╕дщдьд┐╝┴╠фб╫д└д▒д╟д╩дпбдб╓▓Є╝сб╫б╓┴ъ─╚б╫б╓└д┤╓╧├б╫д╚дддж╩м╬рдЄ─╔▓├д╖д╞д█д╖ддд╚ддджеье╙ехб╝дЄддд┐д└ддд┐бе
 
 
 \subsection{╩м╬╠д╦▒■д╕д┐╜─╦└д╬┬└д╡дф┤╓│╓}
@@ -386,7 +386,7 @@ Ericдщ\cite{taskdriven}д╧бде╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛
 ╞├д╦▓л┐зд╧╕лдид▐д╗дєд╟д╖д┐бедшд├д╞бд┐здЄ╩╤дид╞ддд┐д└д▒дыд╚╜їдлдъд▐д╣беб╫д╖д┐дмд├д╞бд╦▄е╖е╣е╞ерд╬бд╞├д╦ележеєе╗ещб╝д╦┤╪д╣ды╜─╦└дф╝┬║▌д╬╡н╜╥д╬╔┴▓шд╦дкддд╞▓■┴▒д╣ды╔м═╫дмдвдыбе
 
 \subsection{╝┤д╬╔╜╝и}
-└╤д▀╜┼д═└▐дь└■е░еще╒д╦дкддд╞бд╜─╝┤▓г╝┤дм▓┐дЄ╔╜д╖д╞дыдлдядлдщд╩ддд╬д╟бд╝┤дЄ╔╜╝ид╣дыдшджд╦╡сдсдщдьд┐бе
+└╤д▀╜┼д═└▐дь└■е░еще╒д╦дкддд╞бд╜─╝┤▓г╝┤дм▓┐дЄ╔╜д╖д╞дддыдлдядлдщд╩ддд╬д╟бд╝┤дЄ╔╜╝ид╣дыдшджд╦╡сдсдщдьд┐бе
 
 \subsection{╩╕╗·д╬┬чднд╡}
 ╩╕╗·д╬┬чднд╡д╦д─ддд╞╝бд╬е│есеєе╚дЄддд┐д└ддд┐беб╓ете╦е┐б╝дм╛од╡дд╛ь╣чбдг▒
