--- a/chapter5.tex
+++ b/chapter5.tex
@@ -36,9 +36,9 @@
 クライエントの発言について単語単位ではなく文単位で「愛」「交友」「仕事」を分類するように変更を行った．
 
 \section{カウンセラーの発言の分類単位}
-カウンセラーの発言について，「開かれた質問」「閉じられた質問」だけでなく，「解釈」「相づち」「世間話」という分類を追加してほしいというレビューをいただいたので，追加を行った．
+カウンセラーの発言について，「開かれた質問」「閉じられた質問」だけでなく，「解釈」「相槌」「世間話」という分類を追加してほしいというレビューをいただいたので，追加を行った．
 
-ここで，積み重ね折れ線グラフの初期描画の際の分類行程について説明する．この行程について簡単に説明した図を，図5.1に示す．まず「いつ」「どこ」「何」などのいわゆる5W1Hを示す疑問詞をもつ発言を「開かれた質問」に分類する．次に残りの発言のうち，単語数が５個以下のものを「相づち」に分類する．さらに残りの発言のうち終助詞「か」を含む発言を「閉じられた質問」に分類する．今までの３つに分類されなかったものは「解釈」か「世間話」に分類されるわけだが，終助詞の「ね」を含むものを「解釈」，含まないものを「世間話」とした．
+ここで，積み重ね折れ線グラフの初期描画の際の分類行程について説明する．この行程について簡単に説明した図を，図5.1に示す．まず「いつ」「どこ」「何」などのいわゆる5W1Hを示す疑問詞をもつ発言を「開かれた質問」に分類する．次に残りの発言のうち，単語数が５個以下のものを「相槌」に分類する．さらに残りの発言のうち終助詞「か」を含む発言を「閉じられた質問」に分類する．今までの３つに分類されなかったものは「解釈」か「世間話」に分類されるわけだが，終助詞の「ね」を含むものを「解釈」，含まないものを「世間話」とした．
 
 \section{分量に応じた縦棒の太さや間隔}
 
