delete subsubsection of chapter4

--- a/chapter1.tex
+++ b/chapter1.tex
@@ -1,6 +1,6 @@
 
 
-心療において，カウンセラーは心身症やストレスからくる身体症状をもつ患者ないしクライエントの治療の一貫としてカウンセリングを行う．
+\cite{sen1}心療において，カウンセラーは心身症やストレスからくる身体症状をもつ患者ないしクライエントの治療の一貫としてカウンセリングを行う．
 
 
 しかし，ビギナーのカウンセラーは「対人関係上の問題」を，質問に対する回答として患者ないしクライエントから引き出すのに苦戦しているという問題がある．本論文では以降，患者ないしクライエントのことをまとめてクライエントと記述する．
