--- a/chapter4.tex
+++ b/chapter4.tex
@@ -6,9 +6,9 @@
 
 д▐д║╦▄╧└╩╕д╬╝┬╕│д╟═╤ддды╞■╬╧е╟б╝е┐д╦д─ддд╞╜╥д┘дыбе╕х╜╥д╣ды┴┤д╞д╬╝┬╕│д╦дкддд╞бд╞■╬╧е╟б╝е┐д╧╢ж─╠д╖д╞╕х╜╥д╣ды┴┤16╕─д╬е╟б╝е┐дЄ╗╚═╤д╖д┐бе
 
-╦▄╧└╩╕д╬╝┬╕│д╟═╤ддды┬╨╛▌е╟б╝е┐д╦д╧б╓┐┤╬┼╞т▓╩д╦дкд▒ды└▌┐й╛у│▓└ь╠чешб╝ем╬┼╦бе░еыб╝е╫б╫д╬б╓ешб╝ем╬┼╦б╗Ў╬у╕б╞д▓ёб╫╗ё╬┴\cite{txt1}\cite{txt2}\cite{txt3}\cite{txt4}\cite{txt5}дЄ╗╚═╤д╖д┐бе
+╦▄╧└╩╕д╬╝┬╕│д╟═╤ддды┬╨╛▌е╟б╝е┐д╦д╧б╓┐┤╬┼╞т▓╩д╦дкд▒ды└▌┐й╛у│▓└ь╠чешб╝ем╬┼╦бе░еыб╝е╫б╫д╬б╓ешб╝ем╬┼╦б╗Ў╬у╕б╞д▓ёб╫╗ё╬┴дЄ╗╚═╤д╖д┐бе═╤ддд┐╗ё╬┴д╬╗Ў╬у╕б╞д▓ёд╬╞№╔╒д╧2014╟п11╖ю11╞№бд
 
-╕х╜╥д╣ды─є░╞е╖е╣е╞ерд╦╞╔д▀╣■д▐д╗дыд┐дсд╬┴░╜ш═¤д╚д╖д╞бдд▐д║бд│╞ележеєе╗еъеєе░▓єд┤д╚д╦е╞ене╣е╚е╟б╝е┐дЄ╩мд▒д┐бе
+╕х╜╥д╣ды─є░╞е╖е╣е╞ерд╦╞╔д▀╣■д▐д╗дыд┐дсд╬┴░╜ш═¤д╚д╖д╞бдд▐д║бд│╞ележеєе╗еъеєе░▓єд┤д╚д╦е╞ене╣е╚е╟б╝е┐дЄ╩мд▒д┐бе╛░бд2015╟п10╖ю17╞№\cite{txt4}дкдшд╙╞▒╟п11╖ю28╞№\cite{txt5}╗Ў╬у╕б╞д▓ё═╤╗ё╬┴д╦д─ддд╞д╧бдележеєе╗еъеєе░д╖д┐╟пдмб╓X╟пб╫д╚д╖д╞╔·д╗дщдьд╞ддд┐д┐дсбд╦▄╧└╩╕╞тд╟дт░╩╣▀бдд│дьдщ2┼└д╬╗ё╬┴╞тд╦дкд▒дыележеєе╗еъеєе░д╬╟пдЄX╟пд╚╔╜╡нд╣дыбе
 
 
 \begin{itemize}
@@ -55,7 +55,7 @@
 ╝бд╦бд┴░е╗епе╖ечеєд╟┴░╜ш═¤д╖д┐╕хд╬jsonе╟б╝е┐дЄбд─є░╞е╖е╣е╞ердмд╔дж╜ш═¤д╣дыдлдЄ└т╠└д╣дыбе─є░╞е╖е╣е╞ерд╬е╣епеъб╝еєе╖ече├е╚дЄ┐▐\ref{fig:systemtsukaikata}д╦╝ид╣бе
  \begin{figure}
    \begin{center}
-     \includegraphics[width=10cm]{systemtsukaikata.png}
+     \includegraphics[width=\linewidth,angle=90]{systemtsukaikata.png}
    \end{center}
    \caption{─є░╞е╖е╣е╞ерд╬е╣епеъб╝еєе╖ече├е╚}
    \label{fig:systemtsukaikata}
@@ -63,7 +63,7 @@
 
 д▐д║бде╓ещеже╢╛хд╟│╞е╞ене╣е╚д╬jsonе╒ебедеыдЄ╞╔д▀╣■дєд╟╖┴┬╓┴╟▓Є└╧д╣дыбе
 ╖┴┬╓┴╟▓Є└╧д╦д╧бдJavaScript╕└╕ьд╬╖┴┬╓┴╟▓Є└╧ещеде╓ещеъд╟двдыkuromoji.js\cite{kuromojijs}дЄ╗╚═╤д╖д┐бе
-ележеєе╗еъеєе░╩╕╗·╡пд│д╖е╞ене╣е╚е╟б╝е┐дЄ╖┴┬╓┴╟▓Є└╧д╖бд╢ж╡пе▐е├е╫д╩д╔дЄ╔┴▓шд╖д╞б╓░жб╫б╓╗┼╗Ўб╫б╓═з┐═б╫д╦┤╪╧вд╣ды├▒╕ьдЄ├╡д╣бед╜д│длдщбдележеєе╗ещб╝длдщд╬╝┴╠ф╖┴┬╓д╚бд б╓░жб╫б╓╗┼╗Ўб╫б╓═з┐═б╫д╬├▒╕ье░еыб╝е╫д╬╗■┤╓╖╨▓сд╦▒шд├д┐╩м╔█╩╤▓╜дЄ▓─╗ы▓╜д╖д┐бе
+ележеєе╗еъеєе░╩╕╗·╡пд│д╖е╞ене╣е╚е╟б╝е┐дЄ╖┴┬╓┴╟▓Є└╧д╖бд╢ж╡пе▐е├е╫д╩д╔дЄ╔┴▓шд╖д╞б╓░жб╫б╓╗┼╗Ўб╫б╓╕Є═зб╫д╦┤╪╧вд╣ды├▒╕ьдЄ├╡д╣бед╜д│длдщбдележеєе╗ещб╝длдщд╬╝┴╠ф╖┴┬╓д╚бд б╓░жб╫б╓╗┼╗Ўб╫б╓╕Є═зб╫д╬├▒╕ье░еыб╝е╫д╬╗■┤╓╖╨▓сд╦▒шд├д┐╩м╔█╩╤▓╜дЄ▓─╗ы▓╜д╖д┐бе
 
 ╦▄е╖е╣е╞ерд╟д╧бдепещедеиеєе╚д╩ддд╖ележеєе╗ещб╝д╬░ь╚п╕└дЄбд╧├╝╘д╬╕Є┬хд╦дшд├д╞╚╜├╟д╣дыдтд╬д╚д╣дыбед─д▐дъбдепещедеиеєе╚д╬░ь╚п╕└д╧бдележеєе╗ещб╝дм├¤дъ╜кдяд├д╞епещедеиеєе╚дм├¤дъ╗╧дсд╞длдщбдепещедеиеєе╚дм├¤дъ╜кдяд├д╞ележеєе╗ещб╝дм├¤дъ╗╧дсдыд▐д╟д╟двдыбед▐д┐бдележеєе╗ещб╝д╬░ь╚п╕└д╧бдепещедеиеєе╚дм├¤дъ╜кдяд├д╞длдщбддвдыддд╧ележеєе╗ещб╝дм╧├дЄ└┌дъ╜╨д╖╗╧дсд╞длдщбдележеєе╗ещб╝дм├¤дъ╜кдяд├д╞епещедеиеєе╚дм├¤дъ╗╧дсдыд▐д╟д╟двдыбе
 
@@ -87,21 +87,21 @@ Ericдщ\cite{taskdriven}д╧бде╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛
 ╠╧╡╝е╟б╝е┐д╟д╬▓─╗ы▓╜╖ы▓╠дЄ┐▐\ref{fig:system1mogi2}бд2014╟п11╖ю╕б╞д▓ё епещедеиеєе╚Aт╘┴█╕хд╟д╬▓─╗ы▓╜╖ы▓╠дЄ┐▐\ref{fig:system1a0911go}бд2015╟п11╖ю╕б╞д▓ё епещедеиеєе╚Cд╬е╟б╝е┐д╟д╬▓─╗ы▓╜╖ы▓╠дЄ┐▐\ref{fig:system1_1002}д╦╝ид╣бе
  \begin{figure}
    \begin{center}
-     \includegraphics[width=10cm]{system1mogi2.png}
+     \includegraphics[width=\linewidth,angle=90]{system1mogi2.png}
    \end{center}
    \caption{─є░╞е╖е╣е╞ерг▒д╬╠╧╡╝е╟б╝е┐д╟д╬▓─╗ы▓╜╖ы▓╠}
    \label{fig:system1mogi2}
  \end{figure}
  \begin{figure}
    \begin{center}
-     \includegraphics[width=10cm]{system1a0911go.png}
+     \includegraphics[width=\linewidth,angle=90]{system1a0911go.png}
    \end{center}
    \caption{─є░╞е╖е╣е╞ерг▒д╬'14╟п11╖ю╕б╞д▓ёAт╘┴█╕хд╟д╬▓─╗ы▓╜╖ы▓╠}
    \label{fig:system1a0911go}
  \end{figure}
  \begin{figure}
    \begin{center}
-     \includegraphics[width=10cm]{system1_1002.png}
+     \includegraphics[width=\linewidth,angle=90]{system1_1002.png}
    \end{center}
    \caption{─є░╞е╖е╣е╞ерг▒д╬'15╟п11╖ю╕б╞д▓ёCд╟д╬▓─╗ы▓╜╖ы▓╠}
    \label{fig:system1_1002}
@@ -312,31 +312,18 @@ Ericдщ\cite{taskdriven}д╧бде╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛
 
 
 
-2016╟п1╖юд╬б╓┐┤д╬▓─╗ы▓╜╕ж╡ц▓ёб╫д╦д╞бд12╠╛д╬└ь╠ч▓╚д╦╦▄е╖е╣е╞ердЄ╕лд╞ддд┐д└днбд░╩▓╝д╬е│есеєе╚дЄддд┐д└ддд┐бе
+2016╟п1╖юд╬б╓┐┤д╬▓─╗ы▓╜╕ж╡ц▓ёб╫д╦д╞бд12╠╛д╬└ь╠ч▓╚д╦╦▄е╖е╣е╞ердЄ╕лд╞ддд┐д└днбде│есеєе╚дЄддд┐д└ддд┐бед╜д╬е│есеєе╚дЄ╕╡д╦бв░╩▓╝д╦╜╥д┘дые╖е╣е╞ер═╫╖ядЄ├ъ╜╨д╖д┐бе
 
-
-\subsection{╕╢╩╕╔╜╝и╡б╟╜}
-
-
-
-
-
-
-
-\begin{itemize}
-\item д╔д│дмд╔д╬╚п╕└дЄ╔╜д╖д╞дддыдлдядлдщд╩дд
-\item еще╕еке▄е┐еєдм┬┐д╣дод╞е░еще╒дм▓╝д╬╩¤д╦дддп
-\end{itemize}
+д▐д║бдд╔д│дмд╔д╬╚п╕└дЄ╔╜д╖д╞дддыдлдядлдщд╩ддбдд▐д┐еще╕еке▄е┐еєдм┬┐д╣дод╞е░еще╒дм▓╝д╬╩¤д╦дддп
 д╚дддж╠ф┬ъд╦┬╨д╖д╞д╧бдележеєе╗ещб╝длдщепещедеиеєе╚д╪д╬╝┴╠фдЄ╝ид╣╜─╦└дЄе▐еже╣екб╝е╨б╝д╣дыд│д╚д╦дшд├д╞бд╝■╩╒д╬╚п╕└дЄ╔╜╝ид╣ды╡б╟╜дЄ─╔▓├д╣дыд│д╚д╟▓Є╖шдЄ┐▐дыд┘днд╟двдыбе
 
 
 
 
-\subsection{едеєе┐ещепе╞еге╓└н}
-едеєе┐ещепе╞еге╓└ндмд╩ддбе╕╜╛їд╟д╧д╜д╬╛ьд╟е┴езе├епе▄е├епе╣д╬┴к┬ЄдЄ╩╤дид┐д└д▒д╟д╧е░еще╒д╦д╜д╬┴к┬Єд╬╩╤╣╣дм╚┐▒╟д╡дьд║бд1▓є1▓єе╓ещеже╢╛хд╟е┌б╝е╕дЄеъеэб╝е╔д╖д╞бдележеєе╗еъеєе░д╬╩╕╗·╡пд│д╖е╞ене╣е╚е╟б╝е┐д╬jsonе╒ебедеыдт╞╔д▀╣■д▀─╛д╣╔м═╫дм└╕д╕д╞дддыбее╓ещеже╢╛хд╟е┌б╝е╕дЄеъеэб╝е╔д╖д╩дпдтбде┴езе├епе▄е├епе╣д╬┴к┬ЄдЄ╩╤дидыд│д╚д╟е╖б╝ереье╣д╦е░еще╒дм╩╤▓╜д╖д╞д█д╖ддбе
+╝бд╦бд╕╜╛їд╟д╧д╜д╬╛ьд╟е┴езе├епе▄е├епе╣д╬┴к┬ЄдЄ╩╤дид┐д└д▒д╟д╧е░еще╒д╦д╜д╬┴к┬Єд╬╩╤╣╣дм╚┐▒╟д╡дьд║бд1▓є1▓єе╓ещеже╢╛хд╟е┌б╝е╕дЄеъеэб╝е╔д╖д╞бдележеєе╗еъеєе░д╬╩╕╗·╡пд│д╖е╞ене╣е╚е╟б╝е┐д╬jsonе╒ебедеыдт╞╔д▀╣■д▀─╛д╣╔м═╫дм└╕д╕д╞дддыбее╓ещеже╢╛хд╟е┌б╝е╕дЄеъеэб╝е╔д╖д╩дпдтбде┴езе├епе▄е├епе╣д╬┴к┬ЄдЄ╩╤дидыд│д╚д╟е╖б╝ереье╣д╦е░еще╒дм╩╤▓╜д╖д╞д█д╖ддд╚дддже│есеєе╚дЄддд┐д└ддд┐бе
 
-\subsection{еще╕еке▄е┐еє╔╜╝ид▐д╟д╬╔м═╫╗■┤╓}
-еэб╝елеыд╟д╬╞░║юд╦дкддд╞бдеще╕еке▄е┐еє╔╜╝ид╦╠є10╔├╔м═╫д╟двдъбдд╜д╬╖╨▓с╗■┤╓дм╠ф┬ъ╗ыд╡дьд╞ддд┐бе
+
+╝бд╦бдеэб╝елеыд╟д╬╞░║юд╦дкддд╞бдеще╕еке▄е┐еє╔╜╝ид╦╠є10╔├╔м═╫д╟двдъбдд╜д╬╖╨▓с╗■┤╓дм╠ф┬ъ╗ыд╡дьд╞ддд┐бе
 
 д▐д┐бде╫еэе╚е┐еде╫д╟д╧бдепещедеиеєе╚д╬╚п╕└д╦┤╪д╣ды┴к┬Є╗шдмд╣д┘д╞╔╜╝ид╡дьд┐╕хд╦ележеєе╗ещб╝д╦┤╪д╣ды╚п╕└дм╔╜╝ид╡дьдыдшджд╦д╩д├д╞ддд┐бед╖длд╖д╜дьд╟д╧дядлдъд┼дщддд╚ддджеье╙ехб╝дЄддд┐д└ддд┐бед╜д╬╞т═╞д╧╝бд╦╝ид╣дтд╬д╟двдыбеб╓епещедеиеєе╚д╬╚п╕└д╚ележеєе╗ещб╝д╬╚п╕└дм╕Є╕▀д╦╕╜дьд╞дддыд╜д╬╛ь╜ъд╟бдепещ
 едеиеєе╚д╬╚п╕└д╚ележеєе╗ещб╝д╬╚п╕└д╦д─ддд╞╩м╬рд╟дндыдшджд╦д╖д╞ддд┐д└д▒ды
@@ -347,9 +334,9 @@ Ericдщ\cite{taskdriven}д╧бде╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛
 д╟днд╩ддд╬д╟бдд╜д╬╛ьд╟┴к┬Єд╟дндыдшджд╦д╖д╞ддд┐д└дп╩¤дм╩╪═°д╟д╧д╩дддлд╚╣═
 дид▐д╣б╫
 
-\subsection{епещедеиеєе╚д╬╚п╕└д╬╩м╬р├▒░╠}
 
-епещедеиеєе╚д╬╚п╕└д╦д─ддд╞бд░╩▓╝д╬еье╙ехб╝дЄддд┐д└ддд┐бе
+
+╝бд╦бдепещедеиеєе╚д╬╚п╕└д╦д─ддд╞бд░╩▓╝д╬еье╙ехб╝дЄддд┐д└ддд┐бе
 
 б╓б╪╗┼╗Ўб┘д╚дддж├▒╕ьдм╜╨д╞днд╞дтбд
 ░жд╬▓▌┬ъд╚д╖д╞д╬╔╫д╦д─ддд╞д╬д╧д╩д╖дЄд╖д╞дддыд╚днд╧бдд╜д╬е╖е┴ехеиб╝е╖ечеє
@@ -368,27 +355,27 @@ Ericдщ\cite{taskdriven}д╧бде╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛
 
 ░╩╛хдлдщбд├▒╕ь├▒░╠д╟д╧д╩дп╩╕├▒░╠д╟б╓░жб╫б╓╕Є═зб╫б╓╗┼╗Ўб╫дЄ╩м╬рд╣дыдшджд╦╩╤╣╣д╣дыд│д╚дм╡сдсдщдьдыбе
 
-\subsection{ележеєе╗ещб╝д╬╚п╕└д╬╩м╬р├▒░╠}
+╝бд╦бдележеєе╗ещб╝д╬╚п╕└д╬╩м╬р├▒░╠д╦д─ддд╞бд
 д▐д║бдепещедеиеєе╚длдщд╬╩╓┼·д└д▒д╟д╩дпбдележеєе╗ещб╝д╬╝┴╠ф╢ш╩мд▒дт╝ъ╞░д╟╜д└╡д╖д┐ддд╚ддджеье╙ехб╝дЄддд┐д└ддд┐бе
 
 д▐д┐бдележеєе╗ещб╝д╬╚п╕└д╦д─ддд╞бдб╓│лдлдьд┐╝┴╠фб╫б╓╩─д╕дщдьд┐╝┴╠фб╫д└д▒д╟д╩дпбдб╓▓Є╝сб╫б╓┴ъ─╚б╫б╓└д┤╓╧├б╫д╚дддж╩м╬рдЄ─╔▓├д╖д╞д█д╖ддд╚ддджеье╙ехб╝дЄддд┐д└ддд┐бе
 
 
-\subsection{╩м╬╠д╦▒■д╕д┐╜─╦└д╬┬└д╡дф┤╓│╓}
+╝бд╦бд
 ╕╢╩╕длдщбдележеєе╗ещб╝длдщепещедеиеєе╚д╪д╬╝┴╠ф╗Ў╣рд╬╩м╬рд╬╗╪╔╕д╚д╖д╞бдепещедеиеєе╚д╬╚п╕└дЄджд╩дмд╖д╞епещедеиеєе╚╝л┐╚дт╡дд┼ддд╞ддд╩длд├д┐д│д╚дЄ╟з├╬д╡д╗дыд╬дм┬ч╗Ўд╟двдыд╬д╟бдд╜дьд╛дьд╬╚п╕└╬╠д╬▓─╗ы▓╜д╬╝┬┴їдЄ└╣дъ╣■дрд┘днд╟двдыд╚╣═дидщдьдыбе
 ╩м╬╠д╦▒■д╕д╞╜─╦└д╬┬└д╡дф┤╓│╓дЄ╩╤дидыд│д╚дЄ─є░╞д╖д┐д╚д│дэ═▀д╖ддд╚ддджеье╙ехб╝дЄддд┐д└ддд┐бе
 
 
-\subsection{╟█┐зд╬▓■┴▒}
+╝бд╦бд
 ╩╕╗·┐зд╦д─ддд╞╝бд╬е│есеєе╚дЄддд┐д└ддд┐бе
 б╓╩╕╗·д╬┐зд╟д╣дмбд▓л┐зд╚│е┐зд╧бде╨е├епд╬╟Єд╚длд╓д├д╞╕лдид╦дпдпд╩д├
 д╞дддыд╚╗╫ддд▐д╣бе╗фд╬ете╦е┐б╝д╬е╓еыб╝ещеде╚еле├е╚д╬▒╞╢┴длдтд╖дьд▐д╗дєдмбд
 ╞├д╦▓л┐зд╧╕лдид▐д╗дєд╟д╖д┐бедшд├д╞бд┐здЄ╩╤дид╞ддд┐д└д▒дыд╚╜їдлдъд▐д╣беб╫д╖д┐дмд├д╞бд╦▄е╖е╣е╞ерд╬бд╞├д╦ележеєе╗ещб╝д╦┤╪д╣ды╜─╦└дф╝┬║▌д╬╡н╜╥д╬╔┴▓шд╦дкддд╞▓■┴▒д╣ды╔м═╫дмдвдыбе
 
-\subsection{╝┤д╬╔╜╝и}
+╝бд╦бд
 └╤д▀╜┼д═└▐дь└■е░еще╒д╦дкддд╞бд╜─╝┤▓г╝┤дм▓┐дЄ╔╜д╖д╞дддыдлдядлдщд╩ддд╬д╟бд╝┤дЄ╔╜╝ид╣дыдшджд╦╡сдсдщдьд┐бе
 
-\subsection{╩╕╗·д╬┬чднд╡}
+║╟╕хд╦бд
 ╩╕╗·д╬┬чднд╡д╦д─ддд╞╝бд╬е│есеєе╚дЄддд┐д└ддд┐беб╓ете╦е┐б╝дм╛од╡дд╛ь╣чбдг▒
 ╠╠д╟╕лдшджд╚д╣дыд╚е╒ейеєе╚е╡еде║дм╢╦дсд╞╛од╡дпд╩дъбд╧╖┤уд╦д╚д├д╞д╧╚╜╩╠╔╘
 ╟╜д╚д╩д├д╞д╖д▐ддд▐д╣бее╒ейеєе╚е╡еде║дЄ╛хд▓дыд│д╚д╧д╟днд▐д╣длбй
