--- a/chapter7.tex
+++ b/chapter7.tex
@@ -1,6 +1,6 @@
 
 
-2016年1月の「心の可視化研究会」では，12名の専門家に本システムのプロトタイプを見ていただき，アイデアに関して概ね良い評価をいただいた．本システムの目的は，ベテランからビギナーへのカウンセリング指導において，どのような質問をビギナーのカウンセラーがクライエントに投げかけるかによって，ビギナーのカウンセラーがクライエントからどのような「対人関係上の問題」に関する回答を引き出せたかが，ベテランのカウンセラーにとってすぐにわかるようになることであったが，コレに関して根本的には達成したと考える．
+2016年1月の「心の可視化研究会」では，可視化の専門家，心理学の専門家など12名の方に本システムのプロトタイプを見ていただき，アイデアに関して概ね良い評価をいただいた．本システムの目的は，ベテランからビギナーへのカウンセリング指導において，どのような質問をビギナーのカウンセラーがクライエントに投げかけるかによって，ビギナーのカウンセラーがクライエントからどのような「対人関係上の問題」に関する回答を引き出せたかが，ベテランのカウンセラーにとってすぐにわかるようになることであったが，コレに関して根本的には達成したと考える．
 
 
 ただし前章で述べたとおり保存機能が求められているなど，ビギナーのカウンセラー指導に対して実用的なものになるにはまだまだステップを必要とすると考える．
@@ -8,11 +8,7 @@
 
 
 
-以下，レビューをもとに今後検討するべき課題をまとめる．
-
-
-
-クライエントの話題の分布の時間経過の可視化方法について積み重ね折れ線グラフ以外の可視化方法を試すことや，カウンセラーの質問の形態の可視化方法について縦棒の形式だけではなく積み重ね折れ線グラフなどの他の可視化方法を試すことも求められる．
+以下，レビューをもとに今後検討するべき課題をまとめる．まず，クライエントの話題の分布の時間経過の可視化方法について積み重ね折れ線グラフ以外の可視化方法を試すことや，カウンセラーの質問の形態の可視化方法について縦棒の形式だけではなく積み重ね折れ線グラフなどの他の可視化方法を試すことも求められる．
 
 アドラー心理学におけるクライエントが抱える問題の関心事のグループ分けに関して，メインのグループ分けである「愛」「交友」「仕事」だけでなく「自己」「スピリチュアル」も選択肢に入れてほしいというレビューを得た．したがって，自己とスピリチュアルの項目を積み重ね折れ線グラフに取り入れる必要性があると考えられるが，次に述べる配色の問題にもかかわってくるので，色の使い分けに注意したいと考える．
 
