--- a/main.bib
+++ b/main.bib
@@ -2,8 +2,6 @@
 
 
 
-
-
 @book{ad2,
 	author = {HEINZ L. ANSBACHER, ROWENA R. ANSBACHER},
 	title = {THE INDIVIDUAL PSYCHOLOGY OF ALFRED ADLER},
@@ -11,32 +9,6 @@
 	year = 1956
 }
 
-
-@ARTICLE{txt1,
-	author = {第11回ヨーガ療法事例検討会},
-	title = {心療内科における摂食障害専門ヨーガ療法グループ 続報},
-	year = 2014
-}
-@ARTICLE{txt2,
-	author = {2015.1.24事例検討会},
-	title = {心療内科における摂食障害専門ヨーガ療法グループ 続報その２},
-	year = 2015
-}
-@ARTICLE{txt3,
-	author = {2015.3.28事例検討会},
-	title = {心療内科における摂食障害専門ヨーガ療法グループ 続報その３},
-	year = 2015
-}
-@ARTICLE{txt4,
-	author = {心療内科における摂食障害専門ヨーガ療法グループ},
-	title = {2015年10月17日事例検討会用資料},
-	year = 2015
-}
-@ARTICLE{txt5,
-	author = {心療内科における摂食障害専門ヨーガ療法グループ},
-	title = {2015年11月28日事例検討会用資料},
-	year = 2015
-}
 
 
 @ARTICLE{taskdriven,
@@ -70,7 +42,7 @@
 }
 
 @ARTICLE{kango,
-	author = "杉浦暁代新美綾子",
+	author = "新美綾子, 杉浦暁代",
 	title = "プロジェクト学習を用いた成人看護学概論の学習により学生が認識した学びと成長 ―テキストマイニングによる分析―",
 	journal = "第44 回日本看護学会 看護教育 学術集会抄録集",
 	year = 2013,
@@ -111,7 +83,7 @@
 
 
 @ARTICLE{voistrap,
-	author = "原田 陽雄, 米山 博人, 下谷 啓 ほか",
+	author = "下谷啓ほか, 米山博人, 原田陽雄",
 	title = "コミュニケーション可視化技術「Voistrap®」",
 	journal = "富士ゼロックス テクニカルレポート",
 	year = 2013,
